<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/id_info"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="25sp"        
        android:gravity="center_vertical|center_horizontal" />
    <ImageView
        android:id="@+id/id_report_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:layout_gravity="center_horizontal"        
        />
    <TextView
        android:id="@+id/id_result"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="20sp"
        android:text="@string/test_resoult" />

    <RelativeLayout        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        >
        <LinearLayout 
            android:id="@+id/id_report_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"            
            >
	        <Button
	            android:id="@+id/id_pass"
	            android:layout_width="0dp"
	            android:layout_weight="1"            
	            android:layout_height="60dp"            
	            android:text="@string/pass" />	
	        <Button
	            android:id="@+id/id_failed"
	            android:layout_width="0dp"
	            android:layout_height="60dp"
	            android:layout_weight="1"
	            android:text="@string/failed" />    
        </LinearLayout>
        
        <Button
	        android:id="@+id/id_abort"
	        android:layout_width="fill_parent"
	        android:layout_height="60dp"
	        android:visibility="invisible" 
	        android:text="@string/failed" />
    </RelativeLayout>
</LinearLayout>