<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical" >
<!-- 开关键     -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <TextView   
	            android:id="@+id/id_info1"
	            android:textSize="16sp"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_horizontal"/>
	        <TextView
		        android:id="@+id/id_result1"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
		        android:gravity="center_horizontal"
		        android:textSize="16sp"
		        android:text="@string/test_resoult"/>
    		<ImageView
        		android:id="@+id/id_report_image1"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:visibility="invisible"
	            android:src="@drawable/pass"
        		android:layout_gravity="center_horizontal"/>
	    </LinearLayout>
	    
		<LinearLayout 
            android:id="@+id/id_report_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            >
	        <Button
	            android:id="@+id/id_pass1"
	            android:layout_width="0dp"
	            android:layout_weight="1"            
	            android:layout_height="wrap_content"
	            android:textSize="16sp"
	            android:text="@string/pass" />	
	        <Button
	            android:id="@+id/id_failed1"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textSize="16sp"
	            android:text="@string/failed" />    
        </LinearLayout>
	</LinearLayout>
<!-- 上音键     -->	
	<LinearLayout
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
		android:orientation="vertical">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <TextView   
	            android:id="@+id/id_info2"
	            android:textSize="16sp"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_horizontal"/>
	        <TextView
		        android:id="@+id/id_result2"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
		        android:gravity="center_horizontal"
		        android:textSize="16sp"
		        android:text="@string/test_resoult"/>
    		<ImageView
        		android:id="@+id/id_report_image2"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:visibility="invisible"
	            android:src="@drawable/pass"
        		android:layout_gravity="center_horizontal"/>
	    </LinearLayout>
	    
		<LinearLayout 
            android:id="@+id/id_report_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            >
	        <Button
	            android:id="@+id/id_pass2"
	            android:layout_width="0dp"
	            android:layout_weight="1"            
	            android:layout_height="wrap_content"
	            android:textSize="16sp"
	            android:text="@string/pass" />	
	        <Button
	            android:id="@+id/id_failed2"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textSize="16sp"
	            android:text="@string/failed" />    
        </LinearLayout>
	</LinearLayout>
<!-- 下音键     -->	
	<LinearLayout
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
		android:orientation="vertical">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <TextView   
	            android:id="@+id/id_info3"
	            android:textSize="16sp"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_horizontal"/>
	        <TextView
		        android:id="@+id/id_result3"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
		        android:gravity="center_horizontal"
		        android:textSize="16sp"
		        android:text="@string/test_resoult"/>
    		<ImageView
        		android:id="@+id/id_report_image3"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:visibility="invisible"
	            android:src="@drawable/pass"
        		android:layout_gravity="center_horizontal"/>
	    </LinearLayout>
	    
		<LinearLayout 
            android:id="@+id/id_report_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            >
	        <Button
	            android:id="@+id/id_pass3"
	            android:layout_width="0dp"
	            android:layout_weight="1"            
	            android:layout_height="wrap_content"
	            android:textSize="16sp"
	            android:text="@string/pass" />	
	        <Button
	            android:id="@+id/id_failed3"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textSize="16sp"
	            android:text="@string/failed" />    
        </LinearLayout>
	</LinearLayout>	
	
<!-- HOME键  
	<LinearLayout
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
		android:orientation="vertical">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <TextView   
	            android:id="@+id/id_info4"
	            android:textSize="16sp"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_horizontal"/>
	        <TextView
		        android:id="@+id/id_result4"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
		        android:gravity="center_horizontal"
		        android:textSize="16sp"
		        android:text="@string/test_resoult"/>
    		<ImageView
        		android:id="@+id/id_report_image4"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:visibility="invisible"
	            android:src="@drawable/pass"
        		android:layout_gravity="center_horizontal"/>
	    </LinearLayout>
	    
		<LinearLayout 
            android:id="@+id/id_report_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            >
	        <Button
	            android:id="@+id/id_pass4"
	            android:layout_width="0dp"
	            android:layout_weight="1"            
	            android:layout_height="wrap_content"
	            android:textSize="16sp"
	            android:text="@string/pass" />	
	        <Button
	            android:id="@+id/id_failed4"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textSize="16sp"
	            android:text="@string/failed" />    
        </LinearLayout>
	</LinearLayout>
 菜单键    
	<LinearLayout
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
		android:orientation="vertical">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <TextView   
	            android:id="@+id/id_info5"
	            android:textSize="16sp"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_horizontal"/>
	        <TextView
		        android:id="@+id/id_result5"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
		        android:gravity="center_horizontal"
		        android:textSize="16sp"
		        android:text="@string/test_resoult"/>
    		<ImageView
        		android:id="@+id/id_report_image5"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:visibility="invisible"
	            android:src="@drawable/pass"
        		android:layout_gravity="center_horizontal"/>
	    </LinearLayout>
	    
		<LinearLayout 
            android:id="@+id/id_report_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            >
	        <Button
	            android:id="@+id/id_pass5"
	            android:layout_width="0dp"
	            android:layout_weight="1"            
	            android:layout_height="wrap_content" 
	            android:textSize="16sp"
	            android:text="@string/pass" />	
	        <Button
	            android:id="@+id/id_failed5"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textSize="16sp"
	            android:text="@string/failed" />    
        </LinearLayout>
	</LinearLayout>
 返回键    
	<LinearLayout
		android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
		android:orientation="vertical">
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        <TextView   
	            android:id="@+id/id_info6"
	            android:textSize="16sp"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
	            android:gravity="center_horizontal"/>
	        <TextView
		        android:id="@+id/id_result6"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:layout_weight="1"
		        android:gravity="center_horizontal"
		        android:textSize="16sp"
		        android:text="@string/test_resoult"/>
    		<ImageView
        		android:id="@+id/id_report_image6"
	            android:layout_height="match_parent"
	            android:layout_width="wrap_content"
	            android:visibility="invisible"
	            android:src="@drawable/pass"
        		android:layout_gravity="center_horizontal"/>
	    </LinearLayout>
	    
		<LinearLayout 
            android:id="@+id/id_report_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"            
            >
	        <Button
	            android:id="@+id/id_pass6"
	            android:layout_width="0dp"
	            android:layout_weight="1"            
	            android:layout_height="wrap_content"
	            android:textSize="16sp"
	            android:text="@string/pass" />	
	        <Button
	            android:id="@+id/id_failed6"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:textSize="16sp"
	            android:text="@string/failed" />
        </LinearLayout>
	</LinearLayout>-->
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<Button
		   android:id="@+id/id_return"
		   android:layout_width="match_parent"
		   android:layout_height="44dp"
		   android:text="@string/back" /> 
	</LinearLayout>	   
</LinearLayout>